# kamdanes.si

./: .ghci  .gitignore  .travis.yml  GetEvents.hs  Main.hs  Models.hs  README  README.md  TODO  default.nix  kamdanes.cabal  kamdanes.cfg  kamdanes.nix  shell.nix  webpack.config.js
frontend/: Actions.elm  Main.elm  Models.elm  Update.elm  View.elm  default.nix  elm-package.json  index.html  index.js  package.json  webpack.config.js
src/: GetEvents.hs  Main.hs  Models.hs  Util.hs
static/: index.html
static/js/: bundle.js  main.js  main.jsx
test/: UtilSpec.hs
