name:                kamdanes
version:             0.0.1
synopsis:            kamdanes.si website
homepage:            https://github.com/iElectric/kamdanes.si
license:             BSD3
author:              Domen Kožar
maintainer:          domen@dev.si
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable kamdanes
  main-is:             Main.hs
  -- other-modules:       
  build-depends:     base
                     , wai
                     , warp
                     , wreq
                     , http-types
                     , hspec-wai
                     , resourcet
                     , scotty
                     , aeson
                     , configurator
                     , lens-aeson
                     , text
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
