name:                kamdanes
version:             0.0.1
synopsis:            kamdanes.si website
homepage:            https://github.com/iElectric/kamdanes.si
license:             BSD3
author:              Domen Kožar
maintainer:          domen@dev.si
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable kamdanes-serve
  Hs-Source-Dirs: src
  main-is: Main.hs
  build-depends:     base
                     , wai
                     , warp
                     , http-types
                     , hspec-wai
                     , resourcet
                     , scotty
                     , aeson
                     , configurator
                     , text
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time

executable kamdanes-getevents
  Hs-Source-Dirs: src
  main-is: GetEvents.hs
  build-depends:     base
                     , wreq
                     , resourcet
                     , aeson
                     , configurator
                     , lens-aeson
                     , lens
                     , text
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , time
                     , bytestring
                     , old-locale
