name:                kamdanes
version:             0.0.1
synopsis:            kamdanes.si website
homepage:            https://github.com/iElectric/kamdanes.si
license:             BSD3
author:              Domen Kožar
maintainer:          domen@dev.si
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  Exposed-modules:     Util
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base
                       , wai
                       , warp
                       , http-types
                       , resourcet
                       , scotty
                       , aeson
                       , configurator
                       , text
                       , persistent
                       , persistent-template
                       , persistent-postgresql
                       , monad-logger
                       , transformers
                       , wai-middleware-static
                       , wai-extra
                       , time

executable kamdanes-serve
  Hs-Source-Dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:     base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , aeson
                     , configurator
                     , text
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time

executable kamdanes-getevents
  Hs-Source-Dirs: src
  main-is: GetEvents.hs
  default-language: Haskell2010
  build-depends:     base
                     , wreq
                     , resourcet
                     , aeson
                     , configurator
                     , lens-aeson
                     , lens
                     , text
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , time
                     , bytestring
                     , timeit

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       base
                       , time
                       , hspec
                       , kamdanes
  GHC-options:         -Wall -threaded -fno-warn-orphans
